@startuml
skinparam shadowing false
skinparam defaultFontName DejaVu Sans
skinparam defaultFontSize 13
skinparam backgroundColor white
skinparam ArrowColor #243b35
skinparam componentBackgroundColor #f2f5f3
skinparam classBackgroundColor #f2f5f3
skinparam wrapWidth 180
title RepairHub – persistentes Modell (Auszug der Spalten)
hide methods
hide circle
entity users {
 * id : BIGINT <<PK>>
 --
 username : VARCHAR(80) <<UNIQUE lower>>
 email : VARCHAR(254) <<UNIQUE lower>>
 password : VARCHAR(255) [Hash]
 active : BOOLEAN
 fs_uniquifier : VARCHAR(64) <<UNIQUE>>
 confirmed_at : TIMESTAMPTZ [optional]
 api_key_hash : VARCHAR(64) [optional, UNIQUE]
 api_key_identity : VARCHAR(64) [optional]
 api_key_created_at : TIMESTAMPTZ [optional]
}
entity devices {
 * id : BIGINT <<PK>>
 owner_id : BIGINT <<FK>>
 name / manufacturer / model : VARCHAR(120)
}
entity repairs {
 * id : BIGINT <<PK>>
 device_id : BIGINT <<FK>>
 description : TEXT
 status : VARCHAR(20)
 hours : NUMERIC(8,2)
 hourly_rate : NUMERIC(11,2)
 created_at : TIMESTAMPTZ
}
entity repair_steps {
 * id : BIGINT <<PK>>
 repair_id : BIGINT <<FK>>
 description : TEXT
 completed : BOOLEAN
}
entity part_items {
 * id : BIGINT <<PK>>
 repair_id : BIGINT <<FK>>
 name : VARCHAR(200)
 unit_price : NUMERIC(11,2)
 quantity : INTEGER
}
entity devices_images {
 * id : VARCHAR(32) <<PK>>
 parent_id : BIGINT <<FK>>
 filename : VARCHAR(200)
 width / height : INTEGER
 created_at : TIMESTAMPTZ
}
entity repairs_images {
 * id : VARCHAR(32) <<PK>>
 parent_id : BIGINT <<FK>>
 filename : VARCHAR(200)
 width / height : INTEGER
 created_at : TIMESTAMPTZ
}
entity roles {
 * id : BIGINT <<PK>>
 name : VARCHAR(80) <<UNIQUE>>
 description : VARCHAR(255) [optional]
}
entity roles_users {
 * user_id : BIGINT <<PK, FK>>
 * role_id : BIGINT <<PK, FK>>
}
users ||--o{ devices
devices ||--o{ repairs
repairs ||--o{ repair_steps
repairs ||--o{ part_items
devices ||--o{ devices_images
repairs ||--o{ repairs_images
users ||--o{ roles_users
roles ||--o{ roles_users
note bottom of roles
Technischer Flask-Security-Vertrag;
keine Browser-Administrationsrolle.
end note
@enduml
